--- a/components/Detail/Creatie/creatie.module.css
+++ b/components/Detail/Creatie/creatie.module.css
@@ -1,5 +1,5 @@
-@value tokens: "../../../css/tokens.module.css";
-@value blueColor, yellowColor, beigeColor, redColor, greenColor, lightColor from tokens;
+/* @value tokens: "../../../css/tokens.module.css";
+@value var(--colorBlue), yellowColor, var(--colorBeige), redColor, greenColor, lightColor from tokens; */
 
 .feedback_timeline {
   display: flex;
@@ -23,7 +23,7 @@
   position: absolute;
   top: 50%;
   height: 0.3rem;
-  background-color: blueColor;
+  background-color: var(--colorBlue);
   width: 100%;
   left: 0;
 }
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: beigeColor;
+  background-color: var(--colorBeige);
   z-index: 1;
   margin-right: 15rem;
 }
@@ -40,8 +40,8 @@
 .form_card {
   height: 25rem;
   width: 50rem;
-  border: 0.3rem solid blueColor;
-  background-color: beigeColor;
+  border: 0.3rem solid var(--colorBlue);
+  background-color: var(--colorBeige);
   padding: 2rem;
   position: relative;
   margin: 2rem 0;
@@ -170,8 +170,8 @@
   object-fit: cover;
   border-radius: 50%;
   display: inline-block;
-  border: 0.3rem solid blueColor;
-  background-color: blueColor;
+  border: 0.3rem solid var(--colorBlue);
+  background-color: var(--colorBlue);
   width: 5.5rem;
   height: 5.5rem;
   display: flex;
@@ -196,9 +196,9 @@
 }
 
 .locked_card {
-  border: 0.3rem solid beigeColor;
+  border: 0.3rem solid var(--colorBeige);
   position: relative;
-  background-color: blueColor;
+  background-color: var(--colorBlue);
   width: 12rem;
   height: 5vh;
   /* margin: 1.5rem 0; */
@@ -247,6 +247,10 @@
   display: none;
 }
 
+.start_icon svg path {
+  fill: red;
+}
+
 @media screen and (max-width: 850px) {
   .timeline {
     flex-direction: column;
@@ -267,7 +271,7 @@
     position: absolute;
     top: 0;
     height: 100%;
-    background-color: blueColor;
+    background-color: var(--colorBlue);
     width: 0.3rem;
     left: 50%;
     margin-top: 5rem;
@@ -289,7 +293,7 @@
     z-index: 2;
     margin-top: 10rem;
     padding-bottom: 20rem;
-    background-color: beigeColor;
+    background-color: var(--colorBeige);
   }
 
   .locked_icon {
@@ -383,8 +387,8 @@
   .form_card {
     height: 25rem;
     width: 100%;
-    border: 0.3rem solid blueColor;
-    background-color: beigeColor;
+    border: 0.3rem solid var(--colorBlue);
+    background-color: var(--colorBeige);
     padding: 2rem;
     position: relative;
     margin: 0;
@@ -399,8 +403,8 @@
     object-fit: cover;
     border-radius: 50%;
     display: inline-block;
-    border: 0.3rem solid blueColor;
-    background-color: blueColor;
+    border: 0.3rem solid var(--colorBlue);
+    background-color: var(--colorBlue);
     width: 4.8rem;
     height: 4.8rem;
     display: flex;
