--- a/components/Detail/Creatie/Feedback/feedback.module.css
+++ b/components/Detail/Creatie/Feedback/feedback.module.css
@@ -1,5 +1,5 @@
-/* @value tokens: "../../../../css/tokens.module.css";
-@value var(--colorBlue), yellowColor, var(--colorBeige), redColor, greenColor, lightColor from tokens; */
+@value tokens: "../../../../css/tokens.module.css";
+@value yellowColor,  redColor, greenColor, lightColor from tokens;
 
 .feedback {
   display: flex;
@@ -30,6 +30,7 @@
   padding: 3rem;
   position: relative;
   background-color: var(--colorBeige);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   width: 35rem;
   height: 25vh;
   margin: 1.5rem 0;
@@ -47,12 +48,12 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  transition: all 0.2s ease-in-out;
 }
 
 .feedback_name {
   composes: smallCaps from "../../../../css/typo.module.css";
   color: var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   margin-bottom: 2rem;
 }
 
@@ -62,6 +63,7 @@
 
 .feedback_date {
   composes: smallText from "../../../../css/typo.module.css";
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   color: var(--colorBlue);
   text-align: center;
   margin: 0.2rem 0;
@@ -69,12 +71,14 @@
 
 .feedback_type {
   composes: smallCaps from "../../../../css/typo.module.css";
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   color: var(--colorBlue);
   text-align: center;
 }
 
 .feedback_text {
   composes: feedback from "../../../../css/typo.module.css";
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   color: var(--colorBlue);
   font-style: italic;
 }
@@ -92,6 +96,7 @@
   border-radius: 50%;
   display: inline-block;
   border: 0.3rem solid var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 @media screen and (max-width: 850px) {
