Crowdfunding and needs Fixes

--- a/components/Profile/Notifications/notifications.module.css
+++ b/components/Profile/Notifications/notifications.module.css
@@ -36,7 +36,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-.button:hover .button:after {
+.project_button:hover .button:after {
   top: 0;
   left: 0;
 }
@@ -72,6 +72,11 @@
   margin-top: 1rem;
 }
 
+.input_label {
+  display: flex;
+  flex-direction: row;
+}
+
 .checkbox {
   display: none;
 }
@@ -80,6 +85,18 @@
   display: flex;
   align-items: baseline;
   flex-wrap: wrap;
+}
+
+.donation_option__form {
+  grid-column: span 3;
+}
+
+.input_text {
+  border: 0.2rem solid blueColor;
+  background-color: transparent;
+  composes: empty from "../../../css/typo.module.css";
+  padding: 0.2rem 0.5rem;
+  margin-top: 1rem;
 }
 
 .error {
