--- a/components/Detail/Crowdfunding/Donation/donation.module.css
+++ b/components/Detail/Crowdfunding/Donation/donation.module.css
@@ -1,10 +1,6 @@
 @value tokens: "../../../../css/tokens.module.css";
 @value yellowColor, redColor, greenColor, lightColor from tokens;
 
-/* .donation_wrapper {
-  position: relative;
-} */
-
 .donation {
   display: flex;
   flex-direction: column;
@@ -36,7 +32,8 @@
   display: inline-block;
   border: 0.3rem solid var(--colorBeige);
   background-color: var(--colorBlue);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  transition: border 1.5s cubic-bezier(0.025, 0.9, 0.45, 1),
+    background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 .donation_content {
@@ -52,12 +49,13 @@
 }
 
 .donation_card {
-  border: 0.3rem solid var(--colorBeige);
+  border: 0.3rem solid var(--colorBlue);
   position: relative;
-  background-color: var(--colorBlue);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  background-color: var(--colorBeige);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1),
+    background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   width: 12rem;
-  height: 5vh;
+  height: 4.5vh;
   /* margin: 1.5rem 0; */
   display: flex;
   justify-content: center;
@@ -84,8 +82,8 @@
 }
 
 .donation_text {
-  color: var(--colorBeige);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  color: var(--colorBlue);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   composes: mediumTitle from "../../../../css/typo.module.css";
 }
 
@@ -94,14 +92,14 @@
   text-align: center;
   margin-top: 0.5rem;
   color: var(--colorBlue);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 .donation_type {
   composes: smallCaps from "../../../../css/typo.module.css";
   text-align: center;
   color: var(--colorBlue);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 .icon_circle__svg__mobile {
@@ -110,7 +108,7 @@
 
 .icon_circle__svg path {
   fill: var(--colorBeige);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 @media screen and (max-width: 850px) {
