--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -1,5 +1,5 @@
 @value tokens: "../../../css/tokens.module.css";
-@value yellowColor, greenColor, lightColor, redColor from tokens;
+@value yellowColor, redColor, lightColor from tokens;
 
 .timeline {
   position: relative;
@@ -26,8 +26,8 @@
 .title {
   composes: largeTitleOutline from "../../../css/typo.module.css";
   margin-bottom: 1rem;
-  -webkit-text-stroke: 0.3rem var(--colorBlue);
-  text-stroke: 0.3rem var(--colorBlue);
+  -webkit-text-stroke: 0.2rem var(--colorBlue);
+  text-stroke: 0.2rem var(--colorBlue);
   -webkit-text-fill-color: var(--colorBlue);
   text-fill-color: var(--colorBlue);
   transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
@@ -128,9 +128,9 @@
 
 .crowdfunding_value {
   composes: smallCaps from "../../../css/typo.module.css";
-  background-color: greenColor;
+  background-color: redColor;
   border: 0.2rem solid var(--colorBeige);
-  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  transition: background-color color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   position: relative;
   width: 12rem;
   text-align: center;
@@ -146,7 +146,7 @@
   border-radius: inherit;
   border: inherit;
   top: 0.5rem;
-  left: 0.15rem;
+  left: 0.1rem;
   width: 105%;
   height: 105%;
   z-index: -1;
@@ -174,6 +174,7 @@
 
 .form_option__text__crowdfunding {
   composes: smallCaps from "../../../css/typo.module.css";
+  margin-right: 1rem;
 }
 
 .input {
@@ -226,6 +227,82 @@
 .crowdfunding_timeline {
   display: flex;
   margin-top: auto;
+}
+
+.donation_progress {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin-left: 26rem;
+  margin-bottom: 8rem;
+}
+
+.progress_caps {
+  composes: smallCaps from "../../../css/typo.module.css";
+  color: var(--colorBlue);
+}
+
+.progress_donated__text {
+  color: var(--colorBlue);
+  font-family: Montserrat, sans-serif;
+  font-weight: 800;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.01rem;
+  line-height: 2.5rem;
+  margin: 1rem 0;
+}
+
+.progress_donated__circle {
+  height: 1rem;
+  width: 1rem;
+  background-color: redColor;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.progress_donated {
+  display: flex;
+  align-items: center;
+}
+
+.progress_points {
+  display: flex;
+  justify-content: space-between;
+}
+
+.progress {
+  display: flex;
+  align-items: center;
+}
+
+.progressbar {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 50rem;
+  height: 0.5rem;
+  margin-right: 1rem;
+  border: none;
+  background-color: #212a34;
+  border: 0.3rem solid blueColor;
+  margin: 1rem 0;
+}
+
+.progressbar::-webkit-progress-bar {
+  background-color: #212a34;
+}
+
+.progressbar::-webkit-progress-value {
+  background-color: redColor;
+}
+
+.progressbar::-moz-progress-bar {
+  background-color: redColor;
+}
+
+.endcrowdfunding {
+  margin: 0 20rem;
 }
 
 @media screen and (max-width: 850px) {
