--- a/components/Detail/Creatie/creatie.module.css
+++ b/components/Detail/Creatie/creatie.module.css
@@ -5,6 +5,13 @@
   display: flex;
   height: 100%;
   flex-direction: row;
+  padding: 0 20rem;
+}
+
+.feedback_timeline__start {
+  display: flex;
+  height: 100%;
+  flex-direction: row;
   padding: 10rem 0;
 }
 
@@ -19,7 +26,7 @@
   padding: 0 20rem;
 }
 
-.timeline_line {
+/* .timeline_line {
   position: absolute;
   top: 50%;
   height: 0.3rem;
@@ -27,7 +34,7 @@
   transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   width: 100%;
   left: 0;
-}
+} */
 
 .form_feedback {
   display: flex;
@@ -192,7 +199,7 @@
   list-style-type: none;
   text-align: center;
   margin-top: auto;
-  margin-bottom: 36vh;
+  margin-bottom: 25vh;
   display: flex;
   justify-self: center;
   flex-direction: column;
@@ -277,6 +284,7 @@
     padding: 0;
     margin: 0;
     margin-top: 5rem;
+    margin-bottom: 10rem;
   }
 
   .feedback_timeline {
@@ -287,15 +295,11 @@
     margin: 0;
   }
 
-  .timeline_line {
-    position: absolute;
-    top: 0;
+  .feedback_timeline__start {
+    display: flex;
     height: 100%;
-    background-color: var(--colorBlue);
-    width: 0.3rem;
-    left: 50%;
-    margin-top: 5rem;
-    margin-bottom: 25rem;
+    flex-direction: column;
+    padding: 0;
   }
 
   .start {
@@ -361,11 +365,6 @@
   .timeline {
     padding-right: 2rem;
     /* margin-bottom: 15rem; */
-  }
-
-  .timeline_line {
-    width: 0.3rem;
-    left: 2.5rem;
   }
 
   .locked {
