--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   padding: 10rem 20rem;
   margin-right: 10rem;
+  min-width: 100vw;
 }
 
 .header {
@@ -48,7 +49,7 @@
   transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
-.timeline_line {
+/* .timeline_line {
   position: absolute;
   top: 50%;
   height: 0.3rem;
@@ -57,13 +58,14 @@
   width: 100%;
   left: 0;
   transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
-}
+} */
 
 .donations_timeline {
   display: flex;
   height: 100%;
   flex-direction: row;
   align-items: center;
+  padding: 10rem 0;
 }
 
 .crowdfunding_scroll {
@@ -233,7 +235,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  margin-left: 26rem;
+  margin-left: 20rem;
   margin-bottom: 8rem;
 }
 
@@ -305,6 +307,127 @@
   margin: 0 20rem;
 }
 
+/* Last Imeupdate */
+.locked,
+.start {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: auto;
+  width: 35rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.locked_icon {
+  z-index: 1;
+  justify-self: center;
+  align-self: center;
+  position: absolute;
+  -webkit-transform: translate(0%, -50%);
+  transform: translate(0%, -50%);
+  position: absolute;
+  top: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.icon_circle {
+  text-align: center;
+  object-fit: cover;
+  border-radius: 50%;
+  display: inline-block;
+  border: 0.3rem solid var(--colorBlue);
+  background-color: var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  width: 5.5rem;
+  height: 5.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon_circle__image {
+  object-fit: cover;
+}
+
+.locked_content {
+  z-index: 2;
+  list-style-type: none;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: 26vh;
+  display: flex;
+  justify-self: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.locked_card {
+  border: 0.3rem solid var(--colorBeige);
+  position: relative;
+  background-color: var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  width: 12rem;
+  height: 5vh;
+  /* margin: 1.5rem 0; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.locked_card:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 1rem;
+  left: 0.5rem;
+  width: 105%;
+  height: 105%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+.locked_info {
+  margin-bottom: 2rem;
+}
+
+.locked_text {
+  composes: mediumTitle from "../../../css/typo.module.css";
+  color: var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+}
+
+.locked_date {
+  composes: smallText from "../../../css/typo.module.css";
+  color: var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.locked_type {
+  composes: smallCaps from "../../../css/typo.module.css";
+  text-align: center;
+  color: var(--colorBlue);
+  transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+}
+
+.icon_circle__svg__mobile {
+  display: none;
+}
+
+.icon_circle__svg path {
+  fill: var(--colorBeige);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+}
+
 @media screen and (max-width: 850px) {
   .part_title {
     margin-right: 0;
@@ -333,13 +456,17 @@
     margin-top: auto;
   }
 
-  .timeline_line {
+  .timeline {
+    min-width: unset;
+  }
+
+  /* .timeline_line {
     top: 0;
     height: 100%;
     background-color: var(--colorBlue);
     width: 0.3rem;
     left: 50%;
-  }
+  } */
 
   .header {
     flex-direction: column;
@@ -352,6 +479,11 @@
     justify-content: center;
     z-index: 1;
     margin: 5rem auto;
+  }
+  .crowdfunding_scroll {
+    width: auto;
+    height: 100%;
+    justify-content: flex-start;
   }
 }
 
