--- a/css/detail.module.css
+++ b/css/detail.module.css
@@ -119,7 +119,64 @@
   right: 0;
 }
 
+.timeline {
+  display: flex;
+  position: relative;
+}
+
+.timeline_line {
+  position: absolute;
+  top: 50%;
+  height: 0.3rem;
+  width: 100%;
+  left: 0;
+  transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+}
+
+.timeline_line__cocreatie {
+  background-color: var(--colorBlue);
+  transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  padding-right: 40rem;
+  width: 70%;
+}
+
+.timeline_line__crowdfunding {
+  background-color: var(--colorBlue);
+  transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  margin-left: 40rem;
+  width: 78%;
+}
+
+.timeline_line__realisatie {
+  background-color: var(--colorBlue);
+  transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+  margin-left: 40rem;
+  width: 100%;
+}
+
 @media screen and (max-width: 850px) {
+  .timeline {
+    flex-direction: column;
+  }
+  .timeline_line {
+    position: absolute;
+    top: 0;
+    width: 0.3rem;
+    height: 100%;
+    left: 50%;
+  }
+
+  .timeline_line__cocreatie {
+    margin-top: 30rem;
+    padding-right: 0;
+    height: 70%;
+  }
+
+  .timeline_line__crowdfunding {
+    margin-top: 15rem;
+    margin-left: 0;
+    height: 100%;
+  }
   .part_project {
     display: flex;
     flex-direction: column;
@@ -148,6 +205,10 @@
 }
 
 @media screen and (max-width: 550px) {
+  .timeline_line {
+    width: 0.3rem;
+    left: 2.5rem;
+  }
   .part_project {
     margin: 1rem;
   }
