--- a/css/scroll.css
+++ b/css/scroll.css
@@ -61,22 +61,22 @@ html.has-scroll-init {
   }
 
   .has-scroll-smooth body {
-    overflow: visible;
+    overflow: hidden;
     scroll-behavior: smooth;
   }
 
   .has-scroll-init body {
-    overflow: visible;
+    overflow: hidden;
     scroll-behavior: smooth;
   }
 
   html.has-scroll-smooth {
-    overflow: visible;
+    overflow: hidden;
     scroll-behavior: smooth;
   }
 
   html.has-scroll-init {
-    overflow: visible;
+    overflow: hidden;
     scroll-behavior: smooth;
   }
 }
