--- a/components/Detail/Needs/needs.module.css
+++ b/components/Detail/Needs/needs.module.css
@@ -32,7 +32,7 @@
   justify-content: flex-start;
   overflow-x: scroll;
   overflow-y: visible;
-  height: 17.5rem;
+  height: 16rem;
   scroll-snap-type: x mandatory;
 }
 .needs_list::-webkit-scrollbar {
@@ -166,7 +166,7 @@
   padding: 0.5rem 0.5rem;
   position: relative;
   width: 100%;
-  height: 8rem;
+  height: 12rem;
 }
 
 .motivation:after {
@@ -192,16 +192,17 @@
 
 .motivation_need__button {
   position: absolute;
-  bottom: -3rem;
-  right: -3rem;
+  bottom: -2rem;
+  right: -2rem;
+  z-index: 2;
 }
 
 .motivation_button {
-  composes: button from "../../../css/buttons.module.css";
+  composes: smallButton from "../../../css/buttons.module.css";
 }
 
 .motivation_circle__button {
-  composes: circleButton from "../../../css/buttons.module.css";
+  composes: smallCircleButton from "../../../css/buttons.module.css";
   transition: none;
 }
 
@@ -210,7 +211,7 @@
 }
 
 .motivation_button__image {
-  composes: buttonImage from "../../../css/buttons.module.css";
+  composes: smallButtonImage from "../../../css/buttons.module.css";
   object-fit: cover;
   width: 100%;
   height: 100%;
