--- a/css/project.module.css
+++ b/css/project.module.css
@@ -4,6 +4,7 @@
 .project {
   z-index: 2;
   margin: 1rem 0 1rem 1rem;
+  position: relative;
 }
 
 .card {
@@ -21,7 +22,7 @@
 }
 
 .card:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -48,7 +49,7 @@
 }
 
 .card_user {
-  composes: mediumTitle from "../css/typo.module.css";
+  composes: mediumTitle from '../css/typo.module.css';
 }
 
 .card_titles {
@@ -57,13 +58,13 @@
 }
 
 .card_title {
-  composes: mediumTitleOutline from "../css/typo.module.css";
+  composes: mediumTitleOutline from '../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
 .card_tags {
   display: flex;
-  composes: smallCaps from "../css/typo.module.css";
+  composes: smallCaps from '../css/typo.module.css';
   color: beigeColor;
 }
 
@@ -133,11 +134,11 @@
 }
 
 .info_light {
-  composes: smallCapsLight from "../css/typo.module.css";
+  composes: smallCapsLight from '../css/typo.module.css';
 }
 
 .info_bold {
-  composes: smallCaps from "../css/typo.module.css";
+  composes: smallCaps from '../css/typo.module.css';
 }
 
 .need {
