--- a/components/Form/Step1/step1.module.css
+++ b/components/Form/Step1/step1.module.css
@@ -217,6 +217,12 @@
   }
 }
 
+@media screen and (max-width: 850px) {
+  .part {
+    margin-top: 2rem;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .part_content {
     grid-column-gap: 2rem;
