--- a/components/Create/Step1/step1.module.css
+++ b/components/Create/Step1/step1.module.css
@@ -162,6 +162,12 @@
   }
 }
 
+@media screen and (max-width: 850px) {
+  .part {
+    margin-top: 2rem;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .content_option {
     margin: 1rem;
