--- a/components/Detail/Realisation/realisation.module.css
+++ b/components/Detail/Realisation/realisation.module.css
@@ -1,5 +1,5 @@
 @value tokens: "../../../css/tokens.module.css";
-@value yellowColor, redColor, lightColor from tokens;
+@value yellowColor, redColor, lightColor, blueColor from tokens;
 
 .realisatie {
   position: relative;
@@ -103,7 +103,7 @@
   position: relative;
   background-color: var(--colorBeige);
   transition: all 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
-  width: 50vh;
+  width: 45vh;
   height: 20vh;
   /* margin: 1.5rem 0; */
   display: flex;
@@ -159,6 +159,37 @@
 .icon_circle__svg path {
   fill: var(--colorBlue);
   transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+}
+
+.contact {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin-left: 20rem;
+  margin-bottom: 8rem;
+}
+
+.contact_title {
+  composes: smallCaps from "../../../css/typo.module.css";
+  margin-bottom: 1rem;
+}
+
+.contact_info {
+  display: flex;
+  align-items: center;
+}
+
+.info_circle {
+  height: 1rem;
+  width: 1rem;
+  background-color: blueColor;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.info_subtitle {
+  composes: smallText from "../../../css/typo.module.css";
+  margin: 0.5rem 0;
 }
 
 @media screen and (max-width: 850px) {
