--- a/components/Form/Step2/step2.module.css
+++ b/components/Form/Step2/step2.module.css
@@ -180,6 +180,12 @@
   }
 }
 
+@media screen and (max-width: 850px) {
+  .part {
+    margin-top: 2rem;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .form {
     display: flex;
