--- a/components/Detail/Realisation/realisation.module.css
+++ b/components/Detail/Realisation/realisation.module.css
@@ -32,7 +32,6 @@
   -webkit-text-fill-color: var(--colorBlue);
   text-fill-color: var(--colorBlue);
   transition: 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
-  white-space: nowrap;
 }
 
 .title_outline {
@@ -91,7 +90,7 @@
   list-style-type: none;
   text-align: center;
   margin-top: auto;
-  margin-bottom: 8vh;
+  margin-bottom: 10vh;
   display: flex;
   justify-self: center;
   flex-direction: column;
@@ -104,7 +103,7 @@
   background-color: var(--colorBeige);
   transition: all 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
   width: 45vh;
-  height: 20vh;
+  height: 18vh;
   /* margin: 1.5rem 0; */
   display: flex;
   justify-content: center;
@@ -120,9 +119,9 @@
   border-radius: inherit;
   border: inherit;
   top: 1rem;
-  left: 0.5rem;
-  width: 105%;
-  height: 105%;
+  left: 1rem;
+  width: 100%;
+  height: 100%;
   z-index: -1;
 }
 
@@ -172,24 +171,31 @@
 .contact_title {
   composes: smallCaps from "../../../css/typo.module.css";
   margin-bottom: 1rem;
+  color: var(--colorBlue);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 .contact_info {
   display: flex;
   align-items: center;
+  color: var(--colorBlue);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 .info_circle {
   height: 1rem;
   width: 1rem;
-  background-color: blueColor;
+  background-color: var(--colorBlue);
   border-radius: 50%;
   margin-right: 1rem;
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 .info_subtitle {
   composes: smallText from "../../../css/typo.module.css";
   margin: 0.5rem 0;
+  color: var(--colorBlue);
+  transition: color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
 }
 
 @media screen and (max-width: 850px) {
